tests/od2trips/errors/format/o/o_time_begin_larger/errors.od2trips
Error: Matrix begin time 3600.00 is larger than end time 0.00.
Quitting (on error).
